Create Cat table

--- a/Server/MyApplication.Server/appsettings.json
+++ b/Server/MyApplication.Server/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Liverpool is the greatest english football club"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=aspnet-MyApplication.Server-0B1160F0-8BD2-4DD7-9761-0F4FAE169F60;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=MyApplication.Server;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
